# lfx

./: .gitignore  README.md  lfx.cabal  stack.yaml
app/: Main.hs
src/: Lifx.hs
src/Lifx/: Command.hs  State.hs
