name:                lfx
version:             0.1.0.0
synopsis:            LIFX cli tool written in Haskell
description:         Please see README.md
homepage:            https://github.com/23ua/lfx#readme
license:             GPL-3
license-file:        LICENSE
author:              23ua
maintainer:          artefacterr@gmail.com
copyright:           2016 23ua
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lifx
                     , Lifx.State
  build-depends:       base >= 4.7 && < 5
                     , HTTP
                     , http-conduit
                     , bytestring
                     , text
                     , aeson

  default-language:    Haskell2010

executable lfx
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lfx
                     , directory
                     , bytestring
  default-language:    Haskell2010

test-suite lfx-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lfx
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/23ua/lfx
